src2/objects/NES_AssetStatusLog__c.object
<CustomObject>
    <fields>
        <fullName>Asset_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Status</label>
        <referenceTo>NES_AssetStatus__c</referenceTo>
        <relationshipLabel>Asset Status Logs</relationshipLabel>
        <relationshipName>Asset_Status_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CapsRecognitionModuleFWVersion__c</fullName>
        <label>Caps Recognition Module FW Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataUsageCurrentMonthMb__c</fullName>
        <label>Data Usage – Current Month (MB)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysSinceLastFilterChange__c</fullName>
        <label>Days Since Last Filter Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastDescalingDate__c</fullName>
        <label>Last Descaling Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastFilterChangeDate__c</fullName>
        <label>Last Filter Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Descaling_Date_TS__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Contains the TS of the Last Descaling Date to use it in IoT</description>
        <label>Last Descaling Date TS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Filter_Change_Date_TS__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Contains the TS of the Last Filter Change Date to use it in IoT</description>
        <label>Last Filter Change Date TS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMIFWversion__c</fullName>
        <label>MMI FW version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModemFWVersion__c</fullName>
        <label>Modem FW Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModemSN__c</fullName>
        <label>Modem S/N</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module1FWVersion__c</fullName>
        <label>Module FW Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module1SN__c</fullName>
        <label>Module S/N</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_AssetModule__c</fullName>
        <label>Asset Module</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Asset Status Logs</relationshipLabel>
        <relationshipName>AssetStatusLogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NES_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Chassis</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Asset Status Logs</relationshipLabel>
        <relationshipName>Asset_Status_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_BrewingUnitJam__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Brewing Unit Jam</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NES_CoffeePumpOverheating__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Coffee Pump Overheating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NES_DataUsageLastMonthMb__c</fullName>
        <label>Data Usage - Last Month (MB)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_DescalingRequestTriggeredByVolume__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Descaling Request Triggered By Volume</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NES_DirectWaterConnectionIssue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Water Connection Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NES_DripTrayFull__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drip Tray Full</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NES_FilterChangeRequestTriggeredByVolume__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filter change request by Volume</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NES_PadBinFull__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pad Bin Full</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NES_RunOutOfWater__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run Out Of Water</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NES_WaterTankEmpty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Water Tank Empty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NES_WaterTankMissing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Water Tank Missing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NextDescalingL__c</fullName>
        <inlineHelpText>Module 1: Litres of water next descaling is due in</inlineHelpText>
        <label>Next Descaling (L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Descaling_Date__c</fullName>
        <label>Next Descaling Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Filter_Change_Date__c</fullName>
        <label>Next Filter Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NumberOfGPRSFailuresInLast24h__c</fullName>
        <label>Number of GPRS failures in last 24h</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalCapsules__c</fullName>
        <label>Total Capsules</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalRecognizedCapsules__c</fullName>
        <label>Total Recognized Capsules</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalUnrecognizedCapsules__c</fullName>
        <label>Total Unrecognized Capsules</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalWaterLitres__c</fullName>
        <label>Total Water (L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Water_From_Last_Descaling_L__c</fullName>
        <label>Total Water From Last Descaling (L)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Water_From_Last_Filter_Change_L__c</fullName>
        <label>Total Water From Last Filter Change (L)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unrecognized_Caps_Consumption__c</fullName>
        <formula>TotalUnrecognizedCapsules__c /  TotalCapsules__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unrecognized Caps Consumption %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Asset Status Log</label>
    <nameField>
        <displayFormat>ASL-{000000}</displayFormat>
        <label>Asset Status Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Status Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>